src/objects/PRO_Contract_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Used__c</fullName>
        <label>% Budget Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buffer_By_Deliverables_Complete__c</fullName>
        <label>Buffer % by Deliverables Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buffer_at_GS_BD_Handover__c</fullName>
        <formula>Contract__r.Buffer_at_GS_BD_Handover__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buffer % at GS-BD Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>PRO Contract Snapshot</relationshipLabel>
        <relationshipName>PRO_Contract_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_of_services__c</fullName>
        <label>Customer Satisfaction of services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Execution_Efficiency__c</fullName>
        <label>Execution Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Buffer__c</fullName>
        <label>Expected % Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expense_And_Travel_Spend__c</fullName>
        <label>Expense &amp; Travel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Travel_Spend_for_Period__c</fullName>
        <label>Expense &amp; Travel Spend for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Execution_Budget__c</fullName>
        <label>GS Project Services Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_for_Period__c</fullName>
        <label>GS Net Income for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_for_Period_by_Handover__c</fullName>
        <label>GS Net Income for Period by Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_to_Date_Handover__c</fullName>
        <label>GS Net Income to Date @ Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_to_Date__c</fullName>
        <label>GS Net Income to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Project_Services_Budget_Handoff_Cp__c</fullName>
        <label>GS Project Services Budget @ Handoff Cp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Project_Services_Budget_Handoff__c</fullName>
        <formula>Contract__r.GS_Project_Services_Budget_Handoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Project Services Budget @ Handoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Revenue__c</fullName>
        <formula>GS_Project_Services_Budget_Handoff_Cp__c * Work_Completed_for_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed_Handover__c</fullName>
        <label>GS Services Completed @ Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed__c</fullName>
        <label>GS Services Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed_for_Period__c</fullName>
        <label>GS Services Completed for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Handover_Completed_for_Per__c</fullName>
        <label>GS Services (Handover) Completed for Per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Income_By_Deliverables_Complete__c</fullName>
        <label>Net Income by Deliverables Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Work_Completed__c</fullName>
        <label>% of Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Services_Budget_For_GS__c</fullName>
        <label>% Services budget for GS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Spend2__c</fullName>
        <label>Product Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Spend__c</fullName>
        <inlineHelpText>Do not use this field, use Product Spend.</inlineHelpText>
        <label>Do Not Use: Product Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Spend_for_Period__c</fullName>
        <label>Product Spend for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Quality_Overall_Status__c</fullName>
        <label>Project Quality (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Spend__c</fullName>
        <label>Services Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Spend_for_Period__c</fullName>
        <label>Services Spend for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Costs__c</fullName>
        <label>Total Calculated Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Costs_for_Period__c</fullName>
        <label>Total Calculated Costs for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Completed_for_Period__c</fullName>
        <label>% of Work Completed for Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>PRO Contract Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PRO Contract Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRO Contract Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>